[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/options_menu.gd" type="Script" id=2]
[ext_resource path="res://fonts/Ricasso-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://sfx/laser_sound.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="options_menu" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="fade_rect" type="ColorRect" parent="CanvasLayer"]
margin_right = 815.0
margin_bottom = 631.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/fade_rect"]
anims/RESET = SubResource( 1 )
anims/fade = SubResource( 2 )

[node name="Options_static" type="Label" parent="."]
margin_left = 91.0
margin_top = 110.0
margin_right = 237.0
margin_bottom = 242.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
text = "Volume:

Frame Cap:

Vsync:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volume_label" type="Label" parent="."]
margin_left = 430.0
margin_top = 110.0
margin_right = 528.0
margin_bottom = 134.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="frame_label" type="Label" parent="."]
margin_left = 434.0
margin_top = 218.0
margin_right = 532.0
margin_bottom = 242.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
text = "60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vsync_label" type="Label" parent="."]
margin_left = 437.0
margin_top = 327.0
margin_right = 535.0
margin_bottom = 351.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
text = "on"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return_key" type="Label" parent="."]
margin_left = 407.0
margin_top = 452.0
margin_right = 621.0
margin_bottom = 503.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/font = SubResource( 3 )
text = "Hit Z To return 
to main menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="animation_finished" from="CanvasLayer/fade_rect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
